add_executable(tser_example)
add_executable(tser_example2)
add_executable(tser_example3)
target_sources(tser_example PRIVATE example.cpp)
target_sources(tser_example2 PRIVATE example2.cpp)
target_sources(tser_example3 PRIVATE example3.cpp)
target_link_libraries(tser_example PRIVATE tser)
target_link_libraries(tser_example2 PRIVATE tser)
target_link_libraries(tser_example3 PRIVATE tser)
set(compile_options )
if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    list(APPEND compile_options /W4 /permissive-)
elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    list(APPEND compile_options -Wall -Wextra -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-missing-prototypes -Wno-exit-time-destructors)
    #it would be nice if googletest could fix their clang warnings :-)
    list(APPEND compile_options -Wno-undef -Wno-global-constructors -Wno-language-extension-token -Wno-exit-time-destructors -Wno-shift-sign-overflow)
endif()
target_compile_options(tser_example PRIVATE ${compile_options})
